--- a/bookmarklet.html
+++ b/bookmarklet.html
@@ -3,19 +3,37 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Mediamesis Classifier Bookmarklet</title>
+	
+	<script>
+		var init = function(){
+			var oBm = document.getElementById('bookmarklet');
+			
+			oBm.addEventListener('mouseover',function (e) {
+				document.getElementById('instructions').innerHTML = '<p>Yep, that one. Drag it and Drop it onto your browser\'s toolbar</p>';
+			},true);
+			oBm.addEventListener('mouseout',function (e) {
+				document.getElementById('instructions').innerHTML = '';
+			},true);
+		}
+		
+		window.onload = init;
+
+	</script>
 </head>
 <body>
 <header>
-	<h1>Mediamesis Classifier Bookmarklet</h1>
+	<h1>uClassify Classifier Bookmarklet</h1>
 </header>
 
 <section id="description">
 	<p>Drag the link below up to your toolbar to create your bookmarklet. Then, whenever you wish to classify a url, just click on the bookmarklet to see how the page you're on scores!</p>
 </section>
 
-<section id="bookmarklet">
-	<p><a href="javascript:location.href='http://www.mediamesis.net/classifiers/uclassify/uclassify.php?cmd=topics&url='+encodeURIComponent(location.href)"
-			onclick="window.alert('Drag and Drop this onto Your Toolbar.');"  title="uClassify Me!">uClassify Me!</a></p>
+<section>
+	<p><a href="javascript:location.href='http://www.mediamesis.net/classifiers/uclassify/uclassify.php?cmd=topics&url='+encodeURIComponent(location.href)"  id="bookmarklet">uClassify Me!</a></p>
 </section>
+
+<section id="instructions"></section>
+
 </body>
 </html>
