--- a/bookmarklet.html
+++ b/bookmarklet.html
@@ -26,7 +26,7 @@
 </header>
 
 <section id="description">
-	<p>Drag the link below up to your toolbar to create your bookmarklet. Then, whenever you wish to classify a url, just click on the bookmarklet to see how the page you're on scores!</p>
+	<p>Drag the link below up to your toolbar to create your bookmarklet. Then, whenever you want to classify a web page, just click on the bookmarklet to see how the page you're on scores!</p>
 </section>
 
 <section>
