removed section tag around bookmarklet link... seems to block the ability to drag & drop to the toolbar.

--- a/bookmarklet.html
+++ b/bookmarklet.html
@@ -29,9 +29,7 @@
 	<p>Drag the link below up to your toolbar to create your bookmarklet. Then, whenever you want to classify a web page, just click on the bookmarklet to see how the page you're on scores!</p>
 </section>
 
-<section>
-	<p><a href="javascript:location.href='http://www.mediamesis.net/classifiers/uclassify/uclassify.php?cmd=topics&url='+encodeURIComponent(location.href)"  id="bookmarklet">uClassify Me!</a></p>
-</section>
+<p><a href="javascript:location.href='http://www.mediamesis.net/classifiers/uclassify/uclassify.php?cmd=topics&url='+encodeURIComponent(location.href)" id="bookmarklet" title="uClassify this!">uClassify Me!</a></p>
 
 <section id="instructions"></section>
 
