--- a/bookmarklet.html
+++ b/bookmarklet.html
@@ -29,8 +29,8 @@
 	<p>Drag the link below up to your toolbar to create your bookmarklet. Then, whenever you want to classify a web page, just click on the bookmarklet to see how the page you're on scores!</p>
 </section>
 
-<!--<p><a href="javascript:location.href='http://www.mediamesis.net/classifiers/uclassify/uclassify.php?cmd=topics&url='+encodeURIComponent(location.href)" id="bookmarklet" title="uClassify this!">uClassify Me!</a></p>-->
-<p><a href="javascript:(function(){ window.open('http://www.mediamesis.net/classifiers/uclassify/uclassify.php?cmd=topics&url='+encodeURIComponent(location.href),'uclassifyme',
+<!-- be sure to change 'http://YOURSERVER.COM' to your server -->
+<p><a href="javascript:(function(){ window.open('http://YOURSERVER.COM/uclassify.php?cmd=topics&url='+encodeURIComponent(location.href),'uclassifyme',
 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); })();" id="bookmarklet" title="uClassify this!">uClassify Me!</a></p>
 
 <section id="instructions"></section>
