uclassify.php path

--- a/bookmarklet.html
+++ b/bookmarklet.html
@@ -30,7 +30,7 @@
 </section>
 
 <!-- be sure to change 'http://YOURSERVER.COM' to your server -->
-<p><a href="javascript:(function(){ window.open('http://www.mediamesis.net/classifiers/uclassify/uclassify.php?cmd=topics&url='+encodeURIComponent(location.href),'uclassifyme',
+<p><a href="javascript:(function(){ window.open('http://YOURSERVER.COM/uclassify.php?cmd=topics&url='+encodeURIComponent(location.href),'uclassifyme',
 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); })();" id="bookmarklet" title="uClassify this!">uClassify Me!</a></p>
 
 <section id="instructions"></section>
