--- a/bookmarklet.html
+++ b/bookmarklet.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Mediamesis Classifier Bookmarklet</title>
+	<title>uClassify Classifier Bookmarklet</title>
 	
 	<script>
 		var init = function(){
