cleaned up for github

--- a/bookmarklet.html
+++ b/bookmarklet.html
@@ -50,8 +50,8 @@
 	<p>Drag the link below up to your toolbar to create your bookmarklet. Then, whenever you want to classify a web page, just click on the bookmarklet to see how the page you're on scores!</p>
 </section>
 
-<!-- be sure to change tokens ***YOUR_SERVER*** & ***YOUR_FILE_NAME*** to reflect your host & file name
-<p><a href="javascript:(function(){ window.open('http://***YOUR_SERVER***/***YOUR_FILE_NAME***?cmd=topics&url='+encodeURIComponent(location.href),'uclassifyme',
+<!-- be sure to change tokens ***YOUR_SERVER*** & ***YOUR_FILE_PATH*** to reflect your host & file name -->
+<p><a href="javascript:(function(){ window.open('http:/***YOUR_SERVER***/***YOUR_FILE_NAME***?clsfr=topics&url='+encodeURIComponent(location.href),'uclassifyme',
 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); })();" id="bookmarklet" title="uClassify this!">uClassify Me!</a></p>
 
 <section id="instructions"></section>
