--- a/bookmarklet.html
+++ b/bookmarklet.html
@@ -51,7 +51,7 @@
 </section>
 
 <!-- be sure to change tokens ***YOUR_SERVER*** & ***YOUR_FILE_PATH*** to reflect your host & file name -->
-<p><a href="javascript:(function(){ window.open('http:/***YOUR_SERVER***/***YOUR_FILE_NAME***?clsfr=topics&url='+encodeURIComponent(location.href),'uclassifyme',
+<p><a href="javascript:(function(){ window.open('http://www.mediamesis.net/widgets/uClassify-Utility/demo.php?clsfr=topics&url='+encodeURIComponent(location.href),'uclassifyme',
 'left=20,top=20,width=900,height=500,toolbar=1,resizable=0'); })();" id="bookmarklet" title="uClassify this!">uClassify Me!</a></p>
 
 <section id="instructions"></section>
